 # [#22158] Templates are still available for assignment after being unpublished
 # [#26040] Redirect of article enabled with 'register to read more' function results in 404 Category not found (Joel Walker)
 # [#23793] Core update potentially allows for installing an older update
 # [#26221] Disabling admin module Title breaks layout

22-Jun-2011 Christophe Demko
 # [#24604] JDate class sets php timezone to UTC which forces all Joomla addons to use UTC dates
 # [#25239] Cant set template style (bill richardson)
 + [#26171] Automatic DB update
 + [#25041] Module Menu Assignment Enhancements (David Havard)
 # [#26222] Fatal error: Class 'JFile' not found in \libraries\joomla\cache\storage\file.php on line 200 (Peter Chovancak)
 ^ Rename the update SQL file
 # [#26111] JFormFieldMedia not match with com_media params (Yohann Tilotti)
 # [#25697] Joomla updater needs better error reporting (Roland Dalmulder)

21-Jun-2011 Christophe Demko
 # [#26211] New opensearch feature generate non valid html output
 # [#26212] Bluestork administrator login screen is not valid
 ^ Replace media/system/images/notice-* images by transparent ones

21-Jun-2011 Jean-Marie Simonet
 # [#26172] fatal error when calling $app->logout(); Thanks Nikolai
 
21-Jun-2011 Mark Dexter
 # [#26194] Replace calls to JRegistry::loadJSON (Michael Babker)
 # [#26196] Use field type email in com_contact (Rouven Weßling)
 # [#26193] Actually use the namespaced version of checkAll() (Rouven Weßling)

20-Jun-2011 Christophe Demko
 # [#26201] Broken newsfeeds when SEF URLs are off (Nikolai Plath)
 + [#25200] View Access Level not testing in Administrator Models (Amy Stephen)
 + [#25250] Add support for OpenSearch to com_search (Rouven Weßling)

20-Jun-2011 Andrew Eddie
 + Added feature [#26113] Add PHP and HTML modes to CodeMirror (Rouven Weßling).
 + Added feature [#24930] Add to debug log information component and module start time and memory use when showing (Vladimir Serotyukov, Dennis Hermatski).